; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb-v2/extr_lmedm04.c_lme2510_kill_urb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb-v2/extr_lmedm04.c_lme2510_kill_urb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_data_stream = type { i32, i32* }

@.str = private unnamed_addr constant [20 x i8] c"killing URB no. %d.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_data_stream*)* @lme2510_kill_urb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lme2510_kill_urb(%struct.usb_data_stream* %0) #0 {
  %2 = alloca %struct.usb_data_stream*, align 8
  %3 = alloca i32, align 4
  store %struct.usb_data_stream* %0, %struct.usb_data_stream** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %21, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.usb_data_stream*, %struct.usb_data_stream** %2, align 8
  %7 = getelementptr inbounds %struct.usb_data_stream, %struct.usb_data_stream* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %24

10:                                               ; preds = %4
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @deb_info(i32 3, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load %struct.usb_data_stream*, %struct.usb_data_stream** %2, align 8
  %14 = getelementptr inbounds %struct.usb_data_stream, %struct.usb_data_stream* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @usb_kill_urb(i32 %19)
  br label %21

21:                                               ; preds = %10
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %4

24:                                               ; preds = %4
  %25 = load %struct.usb_data_stream*, %struct.usb_data_stream** %2, align 8
  %26 = getelementptr inbounds %struct.usb_data_stream, %struct.usb_data_stream* %25, i32 0, i32 0
  store i32 0, i32* %26, align 8
  ret i32 0
}

declare dso_local i32 @deb_info(i32, i8*, i32) #1

declare dso_local i32 @usb_kill_urb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
